--- a/TDT/Support/Base.lproj/Main.storyboard
+++ b/TDT/Support/Base.lproj/Main.storyboard
@@ -33,8 +33,8 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O2o-38-ftC">
                                             <rect key="frame" x="190" y="0.0" width="150" height="50"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="50" id="8Jj-sH-A1r"/>
                                                 <constraint firstAttribute="width" constant="150" id="UyM-Nh-HCG"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="vCt-W0-6ht"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                             <nil key="textColor"/>
@@ -49,7 +49,8 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDB-9G-cMW">
                                             <rect key="frame" x="190" y="50" width="150" height="30"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="150" id="1iW-5a-OJj"/>
+                                                <constraint firstAttribute="height" constant="30" id="9ME-RI-HjT"/>
+                                                <constraint firstAttribute="width" constant="150" id="ptg-ob-Aii"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -72,22 +73,24 @@
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                             <state key="normal" title="Schedule Viewing">
-                                                <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="titleColor" red="0.3411764706" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                         </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="GDB-9G-cMW" secondAttribute="trailing" id="1xh-B7-WYV"/>
                                         <constraint firstAttribute="trailing" secondItem="cof-Bh-HhU" secondAttribute="trailing" constant="10" id="AXa-en-kdk"/>
-                                        <constraint firstItem="cof-Bh-HhU" firstAttribute="top" secondItem="GDB-9G-cMW" secondAttribute="bottom" id="AqM-hJ-Y6G"/>
                                         <constraint firstItem="jCD-Y4-Sud" firstAttribute="leading" secondItem="O2V-TO-NQZ" secondAttribute="leading" id="CrN-oy-WAj"/>
                                         <constraint firstAttribute="bottom" secondItem="cof-Bh-HhU" secondAttribute="bottom" constant="40" id="Hdf-1w-k7t"/>
-                                        <constraint firstItem="GDB-9G-cMW" firstAttribute="top" secondItem="O2o-38-ftC" secondAttribute="bottom" id="MPI-Ot-C0L"/>
                                         <constraint firstItem="O2o-38-ftC" firstAttribute="top" secondItem="O2V-TO-NQZ" secondAttribute="top" id="WIu-NA-S6F"/>
                                         <constraint firstItem="jCD-Y4-Sud" firstAttribute="top" secondItem="O2V-TO-NQZ" secondAttribute="top" id="Xgj-ot-Wh4"/>
                                         <constraint firstAttribute="bottom" secondItem="jCD-Y4-Sud" secondAttribute="bottom" id="YBu-8Q-BiH"/>
                                         <constraint firstAttribute="bottom" secondItem="nvR-6o-HLK" secondAttribute="bottom" constant="10" id="d7M-5b-edd"/>
+                                        <constraint firstItem="GDB-9G-cMW" firstAttribute="top" secondItem="O2o-38-ftC" secondAttribute="bottom" id="eBu-AG-Q2R"/>
+                                        <constraint firstItem="O2o-38-ftC" firstAttribute="top" secondItem="O2V-TO-NQZ" secondAttribute="top" id="fnp-cq-rjc"/>
+                                        <constraint firstItem="cof-Bh-HhU" firstAttribute="top" secondItem="GDB-9G-cMW" secondAttribute="bottom" id="hJT-0r-2pd"/>
+                                        <constraint firstAttribute="trailing" secondItem="O2o-38-ftC" secondAttribute="trailing" id="jag-OW-1ds"/>
                                         <constraint firstItem="nvR-6o-HLK" firstAttribute="leading" secondItem="jCD-Y4-Sud" secondAttribute="trailing" constant="10" id="mOG-vh-niD"/>
+                                        <constraint firstAttribute="trailing" secondItem="GDB-9G-cMW" secondAttribute="trailing" id="qJJ-LI-bl2"/>
                                         <constraint firstItem="cof-Bh-HhU" firstAttribute="leading" secondItem="jCD-Y4-Sud" secondAttribute="trailing" constant="10" id="tbT-2D-6U2"/>
                                         <constraint firstAttribute="trailing" secondItem="O2o-38-ftC" secondAttribute="trailing" id="tcZ-XI-yHS"/>
                                     </constraints>
