--- a/TDT/Support/Base.lproj/Main.storyboard
+++ b/TDT/Support/Base.lproj/Main.storyboard
@@ -31,11 +31,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O2o-38-ftC">
-                                            <rect key="frame" x="190" y="0.0" width="150" height="50"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="150" id="UyM-Nh-HCG"/>
-                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="vCt-W0-6ht"/>
-                                            </constraints>
+                                            <rect key="frame" x="220" y="0.0" width="120" height="50"/>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -47,10 +43,9 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDB-9G-cMW">
-                                            <rect key="frame" x="190" y="50" width="150" height="30"/>
+                                            <rect key="frame" x="220" y="50" width="120" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="9ME-RI-HjT"/>
-                                                <constraint firstAttribute="width" constant="150" id="ptg-ob-Aii"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -68,7 +63,7 @@
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nvR-6o-HLK">
                                             <rect key="frame" x="160" y="180" width="100" height="20"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="100" id="dpB-Tm-Acu"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="dpB-Tm-Acu"/>
                                                 <constraint firstAttribute="height" constant="20" id="kCw-jq-1fE"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
@@ -76,14 +71,26 @@
                                                 <color key="titleColor" red="0.3411764706" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                         </button>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lf2-qf-7tp">
+                                            <rect key="frame" x="160" y="10" width="50" height="50"/>
+                                            <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="sGG-Tj-iMV"/>
+                                                <constraint firstAttribute="height" constant="50" id="uIs-0t-70t"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="O2o-38-ftC" firstAttribute="leading" secondItem="Lf2-qf-7tp" secondAttribute="trailing" constant="10" id="3Q5-Pc-Cmw"/>
                                         <constraint firstAttribute="trailing" secondItem="cof-Bh-HhU" secondAttribute="trailing" constant="10" id="AXa-en-kdk"/>
                                         <constraint firstItem="jCD-Y4-Sud" firstAttribute="leading" secondItem="O2V-TO-NQZ" secondAttribute="leading" id="CrN-oy-WAj"/>
                                         <constraint firstAttribute="bottom" secondItem="cof-Bh-HhU" secondAttribute="bottom" constant="40" id="Hdf-1w-k7t"/>
+                                        <constraint firstItem="Lf2-qf-7tp" firstAttribute="top" secondItem="O2V-TO-NQZ" secondAttribute="top" constant="10" id="Ixz-3g-9lH"/>
+                                        <constraint firstItem="Lf2-qf-7tp" firstAttribute="leading" secondItem="jCD-Y4-Sud" secondAttribute="trailing" constant="10" id="QgW-cS-oFq"/>
                                         <constraint firstItem="O2o-38-ftC" firstAttribute="top" secondItem="O2V-TO-NQZ" secondAttribute="top" id="WIu-NA-S6F"/>
                                         <constraint firstItem="jCD-Y4-Sud" firstAttribute="top" secondItem="O2V-TO-NQZ" secondAttribute="top" id="Xgj-ot-Wh4"/>
                                         <constraint firstAttribute="bottom" secondItem="jCD-Y4-Sud" secondAttribute="bottom" id="YBu-8Q-BiH"/>
+                                        <constraint firstItem="GDB-9G-cMW" firstAttribute="leading" secondItem="O2o-38-ftC" secondAttribute="leading" id="bKx-yH-tBh"/>
                                         <constraint firstAttribute="bottom" secondItem="nvR-6o-HLK" secondAttribute="bottom" constant="10" id="d7M-5b-edd"/>
                                         <constraint firstItem="GDB-9G-cMW" firstAttribute="top" secondItem="O2o-38-ftC" secondAttribute="bottom" id="eBu-AG-Q2R"/>
                                         <constraint firstItem="O2o-38-ftC" firstAttribute="top" secondItem="O2V-TO-NQZ" secondAttribute="top" id="fnp-cq-rjc"/>
@@ -101,6 +108,7 @@
                                     <outlet property="imageView" destination="jCD-Y4-Sud" id="Wga-FS-yiB"/>
                                     <outlet property="releaseDateLabel" destination="GDB-9G-cMW" id="1ai-Gb-LNn"/>
                                     <outlet property="titleLabel" destination="O2o-38-ftC" id="elE-oB-sb4"/>
+                                    <outlet property="view" destination="Lf2-qf-7tp" id="UBz-bB-D1j"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -137,6 +145,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
