--- a/TDT/Support/Base.lproj/Main.storyboard
+++ b/TDT/Support/Base.lproj/Main.storyboard
@@ -73,7 +73,7 @@
                                             </state>
                                             <connections>
                                                 <action selector="scheduleButtonPressed:" destination="cdC-yk-2v0" eventType="touchUpInside" id="Diu-aj-wss"/>
-                                                <segue destination="wi7-vL-51d" kind="show" id="hJ2-g3-XjQ"/>
+                                                <segue destination="wi7-vL-51d" kind="show" id="Zsf-C8-bIa"/>
                                             </connections>
                                         </button>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lf2-qf-7tp">
