--- a/TDT/Support/Base.lproj/Main.storyboard
+++ b/TDT/Support/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Collection View Controller-->
+        <!--Movie Collection View Controller-->
         <scene sceneID="4Dc-mM-UGe">
             <objects>
-                <collectionViewController id="Noi-zZ-Cvh" customClass="CollectionViewController" customModule="TDT" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="Noi-zZ-Cvh" customClass="MovieCollectionViewController" customModule="TDT" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="sKe-ZS-wzD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -24,7 +24,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="cdC-yk-2v0" customClass="CollectionViewCell" customModule="TDT" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="cdC-yk-2v0" customClass="MovieCollectionViewCell" customModule="TDT" customModuleProvider="target">
                                 <rect key="frame" x="37" y="0.0" width="340" height="210"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="O2V-TO-NQZ">
@@ -37,7 +37,7 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jCD-Y4-Sud">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jCD-Y4-Sud">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="210"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="150" id="4Mg-FJ-QSt"/>
@@ -72,8 +72,7 @@
                                                 <color key="titleColor" red="0.3411764706" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                             <connections>
-                                                <action selector="scheduleButtonPressed:" destination="cdC-yk-2v0" eventType="touchUpInside" id="Diu-aj-wss"/>
-                                                <segue destination="wi7-vL-51d" kind="show" id="Zsf-C8-bIa"/>
+                                                <action selector="schedule:" destination="cdC-yk-2v0" eventType="touchUpInside" id="Diu-aj-wss"/>
                                             </connections>
                                         </button>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lf2-qf-7tp">
@@ -151,6 +150,9 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="dQP-9w-355"/>
+                    <connections>
+                        <segue destination="wi7-vL-51d" kind="show" identifier="dateSegue" id="7TX-q8-oez"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="35h-5K-W5x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -184,7 +186,7 @@
                         <barButtonItem key="rightBarButtonItem" title="Save Schedule" id="qRG-Et-7R0">
                             <color key="tintColor" systemColor="labelColor"/>
                             <connections>
-                                <action selector="saveButtonPressed:" destination="wi7-vL-51d" id="p28-a0-ECE"/>
+                                <action selector="save:" destination="wi7-vL-51d" id="p28-a0-ECE"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
